GNOME Bugzilla – Bug 670365
GCM gets stuck when it fails to get proper measurements
Last modified: 2020-11-12 15:08:55 UTC
Created attachment 207945 [details] GCM getting stuck with a closed aperture Tested with GCM 3.3.5 on Ubuntu Precise (not yet released). When I tried to calibrate my display with my ColorMunki, and I forgot to open the Munki's aperture, I got the following error: "Calibration error" "The measuring instrument got no valid readings. Please ensure the aperture is fully open." The error is correct. However there is no way to proceed, as even the close button is grayed out. The only way to exit is to click on the X in the window border. Ideally, there should always be a working close/cancel/abort button.
This may be related to https://bugzilla.gnome.org/show_bug.cgi?id=670364
commit 0d9b6a3bffd8902a7a81bca3e79fa5d8b8febb2a Author: Richard Hughes <richard@hughsie.com> Date: Fri Feb 24 16:56:22 2012 +0000 Ensure the VTE is flushed when the spawned program exits This means we can catch the error that is set at exit time from Argyllcms. :100644 100644 2639e93... 3f04aa1... M src/gcm-calibrate-argyll.c commit b9d1f9f16b4aa21529fd00294903147592de43a6 Author: Richard Hughes <richard@hughsie.com> Date: Fri Feb 24 15:57:12 2012 +0000 Ensure the user can quit if the calibration fails Note, we should catch the error before it comes to this, which I'll fix in a seporate commit. Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=670365 :100644 100644 9540fbe... c446805... M src/gcm-calibrate-main.c
I just tested GCM git master (3.3.5+13~g0d9b6a3) on Ubuntu Precise (12.04 to be) and this issue has partly resolved. There is now a nice cancel button, which works as expected. However, there are two remaining issues... The "Go back" button just produces some DBus errors, so it effectively doesn't really allow you to go "back", and redo the calibration. Also the errors displayed in this dialog are fairly confusing to the end user. For example it told me about a "failed inverted jacobian"... Maybe something along these lines would be better: "Failed to get a proper reading, please check if the device is properly attached to the display and if the device's aperture isn't dirty or obstructed." We can still have a VTE which can be expanded for Argyll's exact error messages. The bigger question is, do you want these filed as separate issues?
(In reply to comment #3) > However, there are two remaining issues... The "Go back" button just produces > some DBus errors, so it effectively doesn't really allow you to go "back", and > redo the calibration. commit f502305d6d0f9205a2897c49937305bd2536c2b9 Author: Richard Hughes <richard@hughsie.com> Date: Mon Feb 27 13:40:58 2012 +0000 Do not show a critical warning if we re-try a failed calibration Ensure we uninhibit the display even after a failed calibration. :100644 100644 704b158... 1768b00... M src/gcm-calibrate.c > Also the errors displayed in this dialog are fairly confusing to the end user. > For example it told me about a "failed inverted jacobian"... > > Maybe something along these lines would be better: > > "Failed to get a proper reading, please check if the device is properly > attached to the display and if the device's aperture isn't dirty or > obstructed." > > We can still have a VTE which can be expanded for Argyll's exact error > messages. > > The bigger question is, do you want these filed as separate issues? Nope, I'll work through them here if that's okay. Less bugzilla-spam-mail :)
bugzilla.gnome.org is being replaced by gitlab.gnome.org. We are closing all old bug reports and feature requests in GNOME Bugzilla which have not seen updates for a long time. If you still use gnome-color-manager and if you still see this bug / want this feature in a recent and currently supported version, then please feel free to report it at https://gitlab.gnome.org/GNOME/gnome-color-manager/-/issues/ Thank you for creating this report and we are sorry it could not be implemented (volunteer workforce and time is quite limited).