Ensure the user can quit if the calibration fails

Note, we should catch the error before it comes to this, which I'll fix in a
seporate commit.

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=670365